--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:site_name" content="React App" />
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:title" content="React App" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
