--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
       content="Web site created using create-react-app"
     />
     <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
-    <meta property="og:image:width" content="956 px" />
-    <meta property="og:image:height" content=" 246px" />
+    <meta property="og:image:width" content="956" />
+    <meta property="og:image:height" content=" 246" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
