test smaller img

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/og.jpg" />
-    <meta property="og:image:width" content="956" />
-    <meta property="og:image:height" content=" 246" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-small.jpg" />
+    <meta property="og:image:width" content="378" />
+    <meta property="og:image:height" content=" 196" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
